ast/parser/earth_parser.go
// Code generated from ast/parser/EarthParser.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // EarthParser

import (
	"fmt"
	"strconv"
  "sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type EarthParser struct {
	*antlr.BaseParser
}

var earthparserParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  literalNames           []string
  symbolicNames          []string
  ruleNames              []string
  predictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func earthparserParserInit() {
  staticData := &earthparserParserStaticData
  staticData.literalNames = []string{
    "", "", "", "", "", "", "'FROM'", "'FROM DOCKERFILE'", "'LOCALLY'", 
    "'COPY'", "'SAVE ARTIFACT'", "'SAVE IMAGE'", "'RUN'", "'TEST'", "'EXPOSE'", 
    "'VOLUME'", "'ENV'", "'ARG'", "'SET'", "'LET'", "'LABEL'", "'BUILD'", 
    "'WORKDIR'", "'USER'", "'CMD'", "'ENTRYPOINT'", "'GIT CLONE'", "'ADD'", 
    "'STOPSIGNAL'", "'ONBUILD'", "'HEALTHCHECK'", "'SHELL'", "'DO'", "'COMMAND'", 
    "'FUNCTION'", "'IMPORT'", "'VERSION'", "'CACHE'", "'HOST'", "'PROJECT'", 
    "'WITH'", "", "", "", "", "", "", "", "", "'ELSE'", "'ELSE IF'", "'CATCH'", 
    "'FINALLY'", "'END'",
  }
  staticData.symbolicNames = []string{
    "", "INDENT", "DEDENT", "Target", "UserCommand", "Function", "FROM", 
    "FROM_DOCKERFILE", "LOCALLY", "COPY", "SAVE_ARTIFACT", "SAVE_IMAGE", 
    "RUN", "TEST", "EXPOSE", "VOLUME", "ENV", "ARG", "SET", "LET", "LABEL", 
    "BUILD", "WORKDIR", "USER", "CMD", "ENTRYPOINT", "GIT_CLONE", "ADD", 
    "STOPSIGNAL", "ONBUILD", "HEALTHCHECK", "SHELL", "DO", "COMMAND", "FUNCTION", 
    "IMPORT", "VERSION", "CACHE", "HOST", "PROJECT", "WITH", "DOCKER", "IF", 
    "TRY", "FOR", "WAIT", "NL", "WS", "COMMENT", "ELSE", "ELSE_IF", "CATCH", 
    "FINALLY", "END", "Atom", "EQUALS",
  }
  staticData.ruleNames = []string{
    "earthFile", "targets", "targetOrUserCommand", "target", "targetHeader", 
    "userCommand", "userCommandHeader", "function", "functionHeader", "stmts", 
    "stmt", "commandStmt", "version", "withStmt", "withBlock", "withExpr", 
    "withCommand", "dockerCommand", "ifStmt", "ifClause", "ifBlock", "elseIfClause", 
    "elseIfBlock", "elseClause", "elseBlock", "ifExpr", "elseIfExpr", "tryStmt", 
    "tryClause", "tryBlock", "catchClause", "catchBlock", "finallyClause", 
    "finallyBlock", "forStmt", "forClause", "forBlock", "forExpr", "waitStmt", 
    "waitClause", "waitBlock", "waitExpr", "fromStmt", "fromDockerfileStmt", 
    "locallyStmt", "copyStmt", "saveStmt", "saveImage", "saveArtifact", 
    "runStmt", "testStmt", "buildStmt", "workdirStmt", "userStmt", "cmdStmt", 
    "entrypointStmt", "exposeStmt", "volumeStmt", "envStmt", "argStmt", 
    "setStmt", "letStmt", "optionalFlag", "envArgKey", "envArgValue", "labelStmt", 
    "labelKey", "labelValue", "gitCloneStmt", "addStmt", "stopsignalStmt", 
    "onbuildStmt", "healthcheckStmt", "shellStmt", "userCommandStmt", "functionStmt", 
    "doStmt", "importStmt", "cacheStmt", "hostStmt", "projectStmt", "expr", 
    "stmtWordsMaybeJSON", "stmtWords", "stmtWord",
  }
  staticData.predictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// EarthParserInit initializes any static state used to implement EarthParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewEarthParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func EarthParserInit() {
  staticData := &earthparserParserStaticData
  staticData.once.Do(earthparserParserInit)
}

// NewEarthParser produces a new parser instance for the optional input antlr.TokenStream.
func NewEarthParser(input antlr.TokenStream) *EarthParser {
	EarthParserInit()
	this := new(EarthParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &earthparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "EarthParser.g4"

	return this
}


// EarthParser tokens.
const (
	EarthParserEOF = antlr.TokenEOF
	EarthParserINDENT = 1
	EarthParserDEDENT = 2
	EarthParserTarget = 3
	EarthParserUserCommand = 4
	EarthParserFunction = 5
	EarthParserFROM = 6
	EarthParserFROM_DOCKERFILE = 7
	EarthParserLOCALLY = 8
	EarthParserCOPY = 9
	EarthParserSAVE_ARTIFACT = 10
	EarthParserSAVE_IMAGE = 11
	EarthParserRUN = 12
	EarthParserTEST = 13
	EarthParserEXPOSE = 14
	EarthParserVOLUME = 15
	EarthParserENV = 16
	EarthParserARG = 17
	EarthParserSET = 18
	EarthParserLET = 19
	EarthParserLABEL = 20
	EarthParserBUILD = 21
	EarthParserWORKDIR = 22
	EarthParserUSER = 23
	EarthParserCMD = 24
	EarthParserENTRYPOINT = 25
	EarthParserGIT_CLONE = 26
	EarthParserADD = 27
	EarthParserSTOPSIGNAL = 28
	EarthParserONBUILD = 29
	EarthParserHEALTHCHECK = 30
	EarthParserSHELL = 31
	EarthParserDO = 32
	EarthParserCOMMAND = 33
	EarthParserFUNCTION = 34
	EarthParserIMPORT = 35
	EarthParserVERSION = 36
	EarthParserCACHE = 37
	EarthParserHOST = 38
	EarthParserPROJECT = 39
	EarthParserWITH = 40
	EarthParserDOCKER = 41
	EarthParserIF = 42
	EarthParserTRY = 43
	EarthParserFOR = 44
	EarthParserWAIT = 45
	EarthParserNL = 46
	EarthParserWS = 47
	EarthParserCOMMENT = 48
	EarthParserELSE = 49
	EarthParserELSE_IF = 50
	EarthParserCATCH = 51
	EarthParserFINALLY = 52
	EarthParserEND = 53
	EarthParserAtom = 54
	EarthParserEQUALS = 55
)

// EarthParser rules.
const (
	EarthParserRULE_earthFile = 0
	EarthParserRULE_targets = 1
	EarthParserRULE_targetOrUserCommand = 2
	EarthParserRULE_target = 3
	EarthParserRULE_targetHeader = 4
	EarthParserRULE_userCommand = 5
	EarthParserRULE_userCommandHeader = 6
	EarthParserRULE_function = 7
	EarthParserRULE_functionHeader = 8
	EarthParserRULE_stmts = 9
	EarthParserRULE_stmt = 10
	EarthParserRULE_commandStmt = 11
	EarthParserRULE_version = 12
	EarthParserRULE_withStmt = 13
	EarthParserRULE_withBlock = 14
	EarthParserRULE_withExpr = 15
	EarthParserRULE_withCommand = 16
	EarthParserRULE_dockerCommand = 17
	EarthParserRULE_ifStmt = 18
	EarthParserRULE_ifClause = 19
	EarthParserRULE_ifBlock = 20
	EarthParserRULE_elseIfClause = 21
	EarthParserRULE_elseIfBlock = 22
	EarthParserRULE_elseClause = 23
	EarthParserRULE_elseBlock = 24
	EarthParserRULE_ifExpr = 25
	EarthParserRULE_elseIfExpr = 26
	EarthParserRULE_tryStmt = 27
	EarthParserRULE_tryClause = 28
	EarthParserRULE_tryBlock = 29
	EarthParserRULE_catchClause = 30
	EarthParserRULE_catchBlock = 31
	EarthParserRULE_finallyClause = 32
	EarthParserRULE_finallyBlock = 33
	EarthParserRULE_forStmt = 34
	EarthParserRULE_forClause = 35
	EarthParserRULE_forBlock = 36
	EarthParserRULE_forExpr = 37
	EarthParserRULE_waitStmt = 38
	EarthParserRULE_waitClause = 39
	EarthParserRULE_waitBlock = 40
	EarthParserRULE_waitExpr = 41
	EarthParserRULE_fromStmt = 42
	EarthParserRULE_fromDockerfileStmt = 43
	EarthParserRULE_locallyStmt = 44
	EarthParserRULE_copyStmt = 45
	EarthParserRULE_saveStmt = 46
	EarthParserRULE_saveImage = 47
	EarthParserRULE_saveArtifact = 48
	EarthParserRULE_runStmt = 49
	EarthParserRULE_testStmt = 50
	EarthParserRULE_buildStmt = 51
	EarthParserRULE_workdirStmt = 52
	EarthParserRULE_userStmt = 53
	EarthParserRULE_cmdStmt = 54
	EarthParserRULE_entrypointStmt = 55
	EarthParserRULE_exposeStmt = 56
	EarthParserRULE_volumeStmt = 57
	EarthParserRULE_envStmt = 58
	EarthParserRULE_argStmt = 59
	EarthParserRULE_setStmt = 60
	EarthParserRULE_letStmt = 61
	EarthParserRULE_optionalFlag = 62
	EarthParserRULE_envArgKey = 63
	EarthParserRULE_envArgValue = 64
	EarthParserRULE_labelStmt = 65
	EarthParserRULE_labelKey = 66
	EarthParserRULE_labelValue = 67
	EarthParserRULE_gitCloneStmt = 68
	EarthParserRULE_addStmt = 69
	EarthParserRULE_stopsignalStmt = 70
	EarthParserRULE_onbuildStmt = 71
	EarthParserRULE_healthcheckStmt = 72
	EarthParserRULE_shellStmt = 73
	EarthParserRULE_userCommandStmt = 74
	EarthParserRULE_functionStmt = 75
	EarthParserRULE_doStmt = 76
	EarthParserRULE_importStmt = 77
	EarthParserRULE_cacheStmt = 78
	EarthParserRULE_hostStmt = 79
	EarthParserRULE_projectStmt = 80
	EarthParserRULE_expr = 81
	EarthParserRULE_stmtWordsMaybeJSON = 82
	EarthParserRULE_stmtWords = 83
	EarthParserRULE_stmtWord = 84
)

// IEarthFileContext is an interface to support dynamic dispatch.
type IEarthFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllNL() []antlr.TerminalNode
	NL(i int) antlr.TerminalNode
	Version() IVersionContext
	Stmts() IStmtsContext
	Targets() ITargetsContext

	// IsEarthFileContext differentiates from other interfaces.
	IsEarthFileContext()
}

type EarthFileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEarthFileContext() *EarthFileContext {
	var p = new(EarthFileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = EarthParserRULE_earthFile
	return p
}

func (*EarthFileContext) IsEarthFileContext() {}

func NewEarthFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EarthFileContext {
	var p = new(EarthFileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = EarthParserRULE_earthFile

	return p
}

func (s *EarthFileContext) GetParser() antlr.Parser { return s.parser }

func (s *EarthFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(EarthParserEOF, 0)
}

func (s *EarthFileContext) AllNL() []antlr.TerminalNode {
	return s.GetTokens(EarthParserNL)
}

func (s *EarthFileContext) NL(i int) antlr.TerminalNode {
	return s.GetToken(EarthParserNL, i)
}

func (s *EarthFileContext) Version() IVersionContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVersionContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVersionContext)
}

func (s *EarthFileContext) Stmts() IStmtsContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtsContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtsContext)
}

func (s *EarthFileContext) Targets() ITargetsContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITargetsContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITargetsContext)
}

func (s *EarthFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EarthFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *EarthFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.EnterEarthFile(s)
	}
}

func (s *EarthFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.ExitEarthFile(s)
	}
}




func (p *EarthParser) EarthFile() (localctx IEarthFileContext) {
	this := p
	_ = this

	localctx = NewEarthFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, EarthParserRULE_earthFile)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(173)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(170)
				p.Match(EarthParserNL)
			}


		}
		p.SetState(175)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(177)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	if _la == EarthParserVERSION {
		{
			p.SetState(176)
			p.Version()
		}

	}
	p.SetState(182)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	if ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 68101001445312) != 0) {
		{
			p.SetState(179)
			p.Stmts()
		}
		{
			p.SetState(180)
			p.Match(EarthParserNL)
		}

	}
	p.SetState(187)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(184)
				p.Match(EarthParserNL)
			}


		}
		p.SetState(189)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())
	}
	p.SetState(191)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	if _la == EarthParserTarget || _la == EarthParserUserCommand {
		{
			p.SetState(190)
			p.Targets()
		}

	}
	p.SetState(196)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	for _la == EarthParserNL {
		{
			p.SetState(193)
			p.Match(EarthParserNL)
		}


		p.SetState(198)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(199)
		p.Match(EarthParserEOF)
	}



	return localctx
}


// ITargetsContext is an interface to support dynamic dispatch.
type ITargetsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllTargetOrUserCommand() []ITargetOrUserCommandContext
	TargetOrUserCommand(i int) ITargetOrUserCommandContext
	AllNL() []antlr.TerminalNode
	NL(i int) antlr.TerminalNode

	// IsTargetsContext differentiates from other interfaces.
	IsTargetsContext()
}

type TargetsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTargetsContext() *TargetsContext {
	var p = new(TargetsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = EarthParserRULE_targets
	return p
}

func (*TargetsContext) IsTargetsContext() {}

func NewTargetsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TargetsContext {
	var p = new(TargetsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = EarthParserRULE_targets

	return p
}

func (s *TargetsContext) GetParser() antlr.Parser { return s.parser }

func (s *TargetsContext) AllTargetOrUserCommand() []ITargetOrUserCommandContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITargetOrUserCommandContext); ok {
			len++
		}
	}

	tst := make([]ITargetOrUserCommandContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITargetOrUserCommandContext); ok {
			tst[i] = t.(ITargetOrUserCommandContext)
			i++
		}
	}

	return tst
}

func (s *TargetsContext) TargetOrUserCommand(i int) ITargetOrUserCommandContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITargetOrUserCommandContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITargetOrUserCommandContext)
}

func (s *TargetsContext) AllNL() []antlr.TerminalNode {
	return s.GetTokens(EarthParserNL)
}

func (s *TargetsContext) NL(i int) antlr.TerminalNode {
	return s.GetToken(EarthParserNL, i)
}

func (s *TargetsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TargetsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *TargetsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.EnterTargets(s)
	}
}

func (s *TargetsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.ExitTargets(s)
	}
}




func (p *EarthParser) Targets() (localctx ITargetsContext) {
	this := p
	_ = this

	localctx = NewTargetsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, EarthParserRULE_targets)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(201)
		p.TargetOrUserCommand()
	}
	p.SetState(211)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(205)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)


			for _la == EarthParserNL {
				{
					p.SetState(202)
					p.Match(EarthParserNL)
				}


				p.SetState(207)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(208)
				p.TargetOrUserCommand()
			}


		}
		p.SetState(213)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext())
	}



	return localctx
}


// ITargetOrUserCommandContext is an interface to support dynamic dispatch.
type ITargetOrUserCommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Target() ITargetContext
	UserCommand() IUserCommandContext

	// IsTargetOrUserCommandContext differentiates from other interfaces.
	IsTargetOrUserCommandContext()
}

type TargetOrUserCommandContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTargetOrUserCommandContext() *TargetOrUserCommandContext {
	var p = new(TargetOrUserCommandContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = EarthParserRULE_targetOrUserCommand
	return p
}

func (*TargetOrUserCommandContext) IsTargetOrUserCommandContext() {}

func NewTargetOrUserCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TargetOrUserCommandContext {
	var p = new(TargetOrUserCommandContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = EarthParserRULE_targetOrUserCommand

	return p
}

func (s *TargetOrUserCommandContext) GetParser() antlr.Parser { return s.parser }

func (s *TargetOrUserCommandContext) Target() ITargetContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITargetContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITargetContext)
}

func (s *TargetOrUserCommandContext) UserCommand() IUserCommandContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUserCommandContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUserCommandContext)
}

func (s *TargetOrUserCommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TargetOrUserCommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *TargetOrUserCommandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.EnterTargetOrUserCommand(s)
	}
}

func (s *TargetOrUserCommandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.ExitTargetOrUserCommand(s)
	}
}




func (p *EarthParser) TargetOrUserCommand() (localctx ITargetOrUserCommandContext) {
	this := p
	_ = this

	localctx = NewTargetOrUserCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, EarthParserRULE_targetOrUserCommand)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(216)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case EarthParserTarget:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(214)
			p.Target()
		}


	case EarthParserUserCommand:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(215)
			p.UserCommand()
		}



	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}


	return localctx
}


// ITargetContext is an interface to support dynamic dispatch.
type ITargetContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TargetHeader() ITargetHeaderContext
	AllNL() []antlr.TerminalNode
	NL(i int) antlr.TerminalNode
	INDENT() antlr.TerminalNode
	DEDENT() antlr.TerminalNode
	Stmts() IStmtsContext

	// IsTargetContext differentiates from other interfaces.
	IsTargetContext()
}

type TargetContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTargetContext() *TargetContext {
	var p = new(TargetContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = EarthParserRULE_target
	return p
}

func (*TargetContext) IsTargetContext() {}

func NewTargetContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TargetContext {
	var p = new(TargetContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = EarthParserRULE_target

	return p
}

func (s *TargetContext) GetParser() antlr.Parser { return s.parser }

func (s *TargetContext) TargetHeader() ITargetHeaderContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITargetHeaderContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITargetHeaderContext)
}

func (s *TargetContext) AllNL() []antlr.TerminalNode {
	return s.GetTokens(EarthParserNL)
}

func (s *TargetContext) NL(i int) antlr.TerminalNode {
	return s.GetToken(EarthParserNL, i)
}

func (s *TargetContext) INDENT() antlr.TerminalNode {
	return s.GetToken(EarthParserINDENT, 0)
}

func (s *TargetContext) DEDENT() antlr.TerminalNode {
	return s.GetToken(EarthParserDEDENT, 0)
}

func (s *TargetContext) Stmts() IStmtsContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtsContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtsContext)
}

func (s *TargetContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TargetContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *TargetContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.EnterTarget(s)
	}
}

func (s *TargetContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EarthParserListener); ok {
		listenerT.ExitTarget(s)
	}
}



